syntax = "proto3";

import "google/protobuf/empty.proto";

package arthas.grpc.api;

service ObjectService{
  rpc getInstance(ObjectRequest) returns (ResponseBody);
}

message ObjectRequest {
  int32 jobId = 1;
  int64 resultId = 2;
  string type = 3;
  string express = 4;
  int32 expand = 5;
}

message JavaObject {
  string className = 1;
  repeated JavaField fields = 2;
}

message JavaField {
  string name = 1;

  oneof value {
    JavaObject objectValue = 2;
    BasicValue basicValue = 3;
    ArrayValue arrayValue = 4;
    NullValue nullValue = 5;
    UnexpandedObject unexpandedObject = 6;
  }
}

message BasicValue {
  oneof value {
    int32 intValue = 2;
    int64 longValue = 3;
    float floatValue = 4;
    double doubleValue = 5;
    bool booleanValue = 6;
    string stringValue = 7;
  }
}

message ArrayElement {
  oneof element {
    BasicValue basicValue = 2;
    JavaObject objectValue = 3;
    ArrayValue arrayValue = 5;
    NullValue nullValue = 6;
    UnexpandedObject unexpandedObject = 7;
  }
}

message ArrayValue {
  string className = 1;
  repeated ArrayElement elements = 2;
}

message NullValue {
  string className = 1;
}

message UnexpandedObject {
  string className = 1;
}

service SystemProperty {
  rpc get(google.protobuf.Empty) returns (ResponseBody);
  rpc getByKey(StringKey) returns (ResponseBody);
  rpc update(StringStringMapValue) returns (ResponseBody);
}

service Pwd{
  rpc pwd(google.protobuf.Empty) returns (ResponseBody);
}

service Watch{
  rpc watch(WatchRequest) returns (stream ResponseBody);
}

message StringKey {
  string key = 1;
}

message StringValue {
  string value = 1;
}

message StringStringMapValue {
  map<string, string> stringStringMap = 1;
}

message WatchRequest {
  string classPattern = 1;
  string methodPattern = 2;
  string express = 3;
  string conditionExpress = 4;
  bool isBefore = 5;
  bool isFinish = 6;
  bool isException = 7;
  bool isSuccess = 8;
  int32 expand = 9;
  int32 sizeLimit = 10;
  bool isRegEx = 11;
  int32 numberOfLimit = 12;
  string excludeClassPattern = 13;
  int64 listenerId = 14;
  bool verbose = 15;
  int32 maxNumOfMatchedClass = 16;
  int64 jobId = 17;
}

message WatchResponse {
  string ts = 1;
  double cost = 2;
  string value = 3;
  int32 sizeLimit = 4;
  string className = 5;
  string methodName = 6;
  string accessPoint = 7;
}

message ResponseBody {
  int32 jobId = 1;
  string type = 2;
  int64 resultId = 3;

  oneof data {
    StringStringMapValue stringStringMapValue = 4;
    string stringValue = 5;
    WatchResponse watchResponse = 6;
  }
}